<resources>
    <string name="app_name">RosYama</string>
    <string name="title_activity_maps">Map</string>
    <string name="e_mail">E-mail:</string>
    <string name="e_mail_edt">E-mail</string>
    <string name="pass">Пароль:</string>
    <string name="pass_edt">Пароль</string>
    <string name="enter">Войти</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="e_mail1">E-mail:</string>
    <string name="e_mail1_edt">E-mail</string>
    <string name="nick">Никнейм:</string>
    <string name="nick_edt">Никнейм</string>
    <string name="pass1">Пароль:</string>
    <string name="pass1_edt">Пароль</string>
    <string name="pass1_edt_reap">Повторите пароль</string>
    <string name="sign_up">Регистрация</string>
    <string name="todo3_0">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="nick1">Никнейм:</string>
    <string name="name">Роман</string>
    <string name="city">Город:</string>
    <string name="city_user">Омск</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="author">Создатель:</string>
    <string name="author_name">Рвачев РР</string>
    <string name="author_site">Сайт разработчика:</string>
    <string name="site_of_author">https://vk.com/romanrvachev</string>
    <string name="version">Версия:</string>
    <string name="number_of_version">V1.0</string>
    <string name="todo10">TODO</string>
    <string name="todo11">TODO</string>
    <string name="todo12">TODO</string>
    <string name="enter_acc">Войти</string>
    <string name="sign_up_acc">Регистрация</string>
    <string name="todo13">TODO</string>
    <string name="todo14">TODO</string>
    <string name="todo15">TODO</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Профиль</string>
    <string name="title_dashboard">Карта</string>
    <string name="title_notifications">Информация</string>
</resources>
